src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Account_Name_for_Email_Temp__c</fullName>
        <description>Needed for Legal Approval Needed for Special Terms email template that is sent to Legal once a quote has been submitted for approval to display Account Name of Quote.</description>
        <formula>Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name for Email Temp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Americas__c</fullName>
        <formula>IF(ISPICKVAL(Opportunity.Project_Region__c , &quot;Americas&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Americas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Custom_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Custom Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Equal_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Equal Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <formula>CASE(  Quote_Approval_Status__c  ,
&quot;Not Submitted&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015S0000000TvHR&quot;,&quot;Red&quot;,16,16),
&quot;Submitted For Approval&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015S0000000TvHT&quot;,&quot;Amber&quot;,16,16),
&quot;Approved&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015S0000000TvHJ&quot;,&quot;Green&quot;,16,16),
&quot;Approval Not Required&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015S0000000TvHJ&quot;,&quot;Green&quot;,16,16),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Red: Quote Requires Submission
Amber: Quote is submitted for Approval
Green: Quote Approved or Doesn&apos;t Require Submission</inlineHelpText>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMXB__Annual_Recurring_Total__c</fullName>
        <description>Total Monthly Recurring Revenue multiplied by Number of Terms (In Months)</description>
        <formula>BMXB__Monthly_Recurring_Total__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Monthly Recurring Revenue multiplied by Number of Terms (In Months)</inlineHelpText>
        <label>Annual Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMXB__Contract_Term_Months__c</fullName>
        <inlineHelpText>The number of months for which the contract will be valid.</inlineHelpText>
        <label>Contract Term (Months)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMXB__Daily_Price__c</fullName>
        <formula>BMXB__Annual_Recurring_Total__c / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMXB__End_Date2__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMXB__End_Date__c</fullName>
        <formula>DATE(YEAR( BMXB__Start_Date__c ) + floor((month(BMXB__Start_Date__c) + BMXB__Contract_Term_Months__c )/12) + 
if(and(month(BMXB__Start_Date__c)=12,BMXB__Contract_Term_Months__c&gt;=12),-1,0), 
if( mod( month(BMXB__Start_Date__c) + BMXB__Contract_Term_Months__c , 12 ) = 0, 12 , mod( month(BMXB__Start_Date__c) +BMXB__Contract_Term_Months__c, 12 )), 
min( day(BMXB__Start_Date__c), 
case( 
max( mod( month(BMXB__Start_Date__c) + BMXB__Contract_Term_Months__c , 12 ) , 1), 
9,30, 
4,30, 
6,30, 
11,30, 
2,28+IF(MOD(YEAR( BMXB__Start_Date__c ) + floor((month(BMXB__Start_Date__c) + BMXB__Contract_Term_Months__c )/12) + 
if(and(month(BMXB__Start_Date__c)=12,BMXB__Contract_Term_Months__c&gt;=12),-1,0), 4) = 0, 1, 0), 
31 
) 
) 
)-1 + ROUND( (BMXB__Contract_Term_Months__c - FLOOR(BMXB__Contract_Term_Months__c)) * 
CASE( 
MOD( MONTH(BMXB__Start_Date__c) + FLOOR(BMXB__Contract_Term_Months__c) , 12 ), 
9,30, 
4,30, 
6,30, 
11,30, 
2,28 + IF(MOD(YEAR( BMXB__Start_Date__c ) + floor((month(BMXB__Start_Date__c) + BMXB__Contract_Term_Months__c )/12) + 
if(and(month(BMXB__Start_Date__c)=12,BMXB__Contract_Term_Months__c&gt;=12),-1,0), 4) = 0, 1, 0), 
31 
), 0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMXB__First_Year_Contract_Value__c</fullName>
        <formula>IF(  BMXB__Contract_Term_Months__c &gt; 12, BMXB__One_time_Total__c +  BMXB__Annual_Recurring_Total__c,  BMXB__Total_Contract_Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Year Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMXB__Monthly_Recurring_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of all Monthly Recurring Revenue</description>
        <inlineHelpText>Sum of all Monthly Recurring Revenue</inlineHelpText>
        <label>Monthly Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMXB__Number_of_Line_Items_Needing_Approval__c</fullName>
        <label>Number of Line Items Needing Approval</label>
        <summaryFilterItems>
            <field>QuoteLineItem.BMXB__Requires_Approval__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMXB__One_time_Total__c</fullName>
        <description>Total of all one-time (non-recurring) charges</description>
        <inlineHelpText>Total of all one-time (non-recurring) charges</inlineHelpText>
        <label>One-time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMXB__Quote_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMXB__Start_Date__c</fullName>
        <description>Date on which contract begins</description>
        <inlineHelpText>Date on which contract begins</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMXB__Submitted_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMXB__Total_Contract_Value__c</fullName>
        <formula>IF( !ISBLANK(BMXB__End_Date2__c) &amp;&amp; !ISBLANK(BMXB__Start_Date__c), (BMXB__End_Date2__c + 1 - BMXB__Start_Date__c) * BMXB__Daily_Price__c, 0 )   +  BMXB__One_time_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMXP__Primary_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Optional Quote</relationshipLabel>
        <relationshipName>Optional_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <description>Partner Billing Address</description>
        <formula>Contact.MailingStreet &amp; BR() &amp;
Contact.MailingCity &amp; &quot;,&quot; &amp; Contact.MailingState &amp; &quot; &quot; &amp;
Contact.MailingPostalCode &amp; BR()
&amp;Contact.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>End User agrees to cooperate with AppDynamics in the creation of a customer case study, press release and certain other mutually agreed upon co-marketing commitments</inlineHelpText>
        <label>Case Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Payment_Schedule_Notes__c</fullName>
        <label>Custom Payment Schedule Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_VAR_Contract_Signed__c</fullName>
        <formula>Contact.Account.Date_VAR_Contract_Signed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date VAR Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dedicated_Controller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dedicated Controller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_LineItem__c</fullName>
        <formula>Overall_Discount_Percentage__c / Line_Item_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount/LineItem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EULA_URL__c</fullName>
        <formula>IF(Americas__c=TRUE, HYPERLINK(&quot;https://legal.appdynamics.com/AppDynamics_EULA_(Americas)_2015.07.01.pdf&quot;, &quot;https://legal.appdynamics.com/AppDynamics_EULA_(Americas)_2015.07.01.pdf&quot;), HYPERLINK(&quot;https://legal.appdynamics.com/AppDynamics_EULA_(Non-Americas)_2015.07.01.pdf&quot;, &quot;https://legal.appdynamics.com/AppDynamics_EULA_(Non-Americas)_2015.07.01.pdf&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EULA URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EULA_or_Agreement_Type__c</fullName>
        <description>EULA License Types</description>
        <inlineHelpText>Please select the type of EULA that governs this agreement.</inlineHelpText>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Signed EULA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online On-Premise and SaaS EULA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Federal_Distributor_Margin_Amount__c</fullName>
        <formula>Total_Price_After_Partner_Margin__c  * Federal_Distributor_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Distributor Margin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Distributor_Margin__c</fullName>
        <label>Federal Distributor Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Federal_IP_Marking_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Federal Deals Only***</inlineHelpText>
        <label>Federal IP Marking Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Discount__c</fullName>
        <label>Final Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Final__c</fullName>
        <formula>TotalPrice * (1- Final_Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flex_Licenses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>End User shall be provided with additional licenses not to exceed 50% of the applicable number of Baseline Licenses</inlineHelpText>
        <label>Flex Licenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Total_Price__c</fullName>
        <description>The Total Price of Quote Line Items prior to One Time Discount, Partner Margin Discount, and Federal Distributor Margin Discounts are applied.</description>
        <label>Gross Total Price</label>
        <summarizedField>QuoteLineItem.Total_Price_Calculation__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Family__c</field>
            <operation>notEqual</operation>
            <value>Discount</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Validation rule: When you have a &quot;Partner&quot; EULA type this field is checked, causing the &quot;VAR Contract Date&quot; to be filled out.</description>
        <label>Is Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <description>Date at which the quote has been sent out to the potential buyer</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Delivery_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the person to whom the License is delivered</description>
        <label>License Delivery Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (License Delivery Contact)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Item_Count__c</fullName>
        <label>Line Item Count</label>
        <summaryFilterItems>
            <field>QuoteLineItem.UnitPrice</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Memo_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Notes from the quote will be added to the proposal if this box is checked.</inlineHelpText>
        <label>Memo Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_Created__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(CreatedDate)), 1, &quot;01 - January&quot;, 2, &quot;02 - February&quot;, 3, &quot; 03 - March&quot;, 4, &quot; 04 - April&quot;, 5, &quot; 05 - May&quot;, 6, &quot;06 - June&quot;, 7, &quot;07 - July&quot;, 8, &quot;08 - August&quot;, 9, &quot;09 - September&quot;, 10, &quot;10 - October&quot;, 11, &quot;11 - November&quot;, 12, &quot;12 - December&quot;, &quot;None&quot;) &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_After_Partner_Discount_PreAug15__c</fullName>
        <formula>Total_Price_Custom__c * (1 -    Partner_Margin__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net After Partner Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Total_Price__c</fullName>
        <formula>TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes_Approval_State__c</fullName>
        <formula>CASE(Notes_Approval_Status__c , 
&quot;Not Submitted&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx0&quot;,&quot;Red&quot;,16,16), 
&quot;Rejected&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx0&quot;,&quot;Red&quot;,16,16), 
&quot;Pending Approval&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx2&quot;,&quot;Amber&quot;,16,16), 
&quot;Approved&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGws&quot;,&quot;Green&quot;,16,16), 
&quot;No Approval Required&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGws&quot;,&quot;Green&quot;,16,16),&quot;&quot;)</formula>
        <inlineHelpText>Green=No Approval Needed or Approved
Amber=Pending Approval
Red= Not Submitted or Rejected</inlineHelpText>
        <label>Notes Approval State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Approval_Status__c</fullName>
        <description>A status update based on if notes have been added to the quote for customer purposes</description>
        <label>Notes Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Approval Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Please include notes here if you would like them to show up on the proposal</inlineHelpText>
        <label>Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_Of_Yrs__c</fullName>
        <label>Number Of Yrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Non_VSOE_Products__c</fullName>
        <label>Number of Non VSOE Products</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Standard_Non_VSOE__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_VSOE_Products__c</fullName>
        <label>Number of VSOE Products</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Requires_VSOE_Approval__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>One_Time_Discount_Calc_Total_Price__c</fullName>
        <description>Roll up of Quote Line Item Total Price values used for calculating the One Time Discount Distribution across Quote Line Items related to the Quote.</description>
        <label>One Time Discount Calc Total Price</label>
        <summarizedField>QuoteLineItem.Total_Price_Calculation__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.New_or_Renewal__c</field>
            <operation>notEqual</operation>
            <value>Renewal Business</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Family__c</field>
            <operation>notEqual</operation>
            <value>Discount</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>One_Time_Discount_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The One Time Discount to be applied to the Total Price of the Quote.</description>
        <inlineHelpText>Enter a One Time Discount to be applied against the Total Price of the Quote</inlineHelpText>
        <label>One Time Discount %</label>
        <precision>16</precision>
        <scale>13</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>One_Time_Discount_Perpetual__c</fullName>
        <description>summary of only the perpetual products one time discount</description>
        <label>One Time Discount Perpetual</label>
        <summarizedField>QuoteLineItem.Field_Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Family__c</field>
            <operation>equals</operation>
            <value>Perpetual License</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>One_Time_Discount_Total__c</fullName>
        <label>One Time Discount Total</label>
        <summarizedField>QuoteLineItem.One_Time_Discount_Amount__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>One_Time_Discount__c</fullName>
        <description>This is the one time discount price based on the line item</description>
        <label>One Time Discount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Online_On_Premise_EULA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online On-Premise EULA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_On_Premise_and_Saas_EULA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online On-Premise and Saas EULA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_SaaS_EULA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online SaaS EULA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_Id__c</fullName>
        <formula>Opportunity.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Booked_Date__c</fullName>
        <formula>Opportunity.Booked_Date__c</formula>
        <label>Opportunity Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity.CloseDate</formula>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Total_After_One_Time_Discount__c</fullName>
        <formula>Subtotal_incl_Volume_Discount__c - One_Time_Discount_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Total After One Time Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_Discount_Percentage__c</fullName>
        <description>Old Formula:  IF((Subtotal - One_Time_Discount__c - Partner_Margin_Amount__c) &gt; 0, 
 1 - ((TotalPrice + Partner_Margin_Amount__c - One_Time_Discount__c) / (Subtotal + Partner_Margin_Amount__c)),
 0)</description>
        <formula>IF(
Net_Total_Price__c &gt; 0,
(Gross_Total_Price__c -  Net_Total_Price__c )/Gross_Total_Price__c,
0)</formula>
        <label>Overall Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PO_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>PO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Margin_Amount__c</fullName>
        <description>Total_Price_Custom__c - Net_After_Partner_Discount_PreAug15__c</description>
        <formula>(Gross_Total_Price__c - One_Time_Discount__c)*Partner_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Partner Margin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Margin_Discount_Calc_Total_Price__c</fullName>
        <description>Roll up of Quote Line Item Total Price values used for calculating the Partner Margin Discount distribution across Quote Line Items related to the Quote.</description>
        <label>Partner Margin Discount Calc Total Price</label>
        <summarizedField>QuoteLineItem.Total_Price_Calculation__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Family__c</field>
            <operation>notEqual</operation>
            <value>Discount, Hosting, User Conference, Other</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Margin_Discount__c</fullName>
        <label>Partner Margin Discount %</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Margin_Total__c</fullName>
        <label>Partner Margin Total</label>
        <summarizedField>QuoteLineItem.Partner_Margin_Amount__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Margin__c</fullName>
        <label>Partner Margin %</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Phone__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_on_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner on Quote</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Schedule__c</fullName>
        <label>Payment Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Equal Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Custom Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perpetual_After_Volume_Discount_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A trigger should check this field when the Perpetual Total After Volume Discount Roll-up Summary field is changed.</description>
        <label>Perpetual After Volume Discount Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Perpetual_License_Volume_Discount_Total__c</fullName>
        <description>Total of only the perpetual license volume discount</description>
        <label>Perpetual License Volume Discount Total</label>
        <summarizedField>QuoteLineItem.Volume_Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Family__c</field>
            <operation>equals</operation>
            <value>Perpetual License</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Perpetual_License_total_del__c</fullName>
        <description>Total Value of products that fall in the perpetual license product family.</description>
        <label>Perpetual License Total</label>
        <summarizedField>QuoteLineItem.Total_Price_Static__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Family__c</field>
            <operation>equals</operation>
            <value>Perpetual License</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Perpetual_Licenses_Subtotal__c</fullName>
        <description>The sum value of the Subtotal (Total minus Volume Discount) field on all Perpetual License Quote Line Items on the Quote.</description>
        <label>Perpetual Licenses Subtotal</label>
        <summarizedField>QuoteLineItem.Subtotal_custom__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Family__c</field>
            <operation>equals</operation>
            <value>Perpetual License</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Perpetual_Total_Volume_Discount__c</fullName>
        <description>The sum Total Price of all Products on the Quote from the Perpetual License Family.</description>
        <formula>Perpetual_License_total_del__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perpetual Total After Volume Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Lock_During_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The price per unit shall remain the same as those set forth in this Order Form</inlineHelpText>
        <label>Price Lock During Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact at the end customer</description>
        <inlineHelpText>Primary person who should receive the invoice.</inlineHelpText>
        <label>Primary Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Support_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>End customer Primary Support contact</description>
        <label>Primary Support Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Primary Support Contact)</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Approval_Level_1__c</fullName>
        <formula>IF(Overall_Discount_Percentage__c&gt;=0.07,TRUE,FALSE)</formula>
        <label>Quote Approval Level 1</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>